--- a/src/components/Faq/style.module.css
+++ b/src/components/Faq/style.module.css
@@ -10,7 +10,7 @@
   background-color: #fff6f6;
 }
 
-.card h2 {
+.card h3 {
   color: #8a8328;
   font-family: "Cormorant Garamont";
   font-size: 16px;
@@ -29,4 +29,15 @@
   letter-spacing: -0.011em;
   margin: 0 15px 10px;
   color: #232221;
+}
+
+.fa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.fa img {
+  margin-right: 10px; /* Adjust margin as needed */
 }
