--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -6,8 +6,8 @@
     #fdfdfd 91.87%
   );
   height: 870px;
-  padding: 15px 10px;
-  margin: 0px auto;
+
+  /* margin: 0px auto; */
   display: flex;
   flex-direction: column;
 }
@@ -17,23 +17,28 @@
   }
 }
 .container {
-  margin: 0 20px;
+  padding: 0 20px;
 }
 .text {
   line-height: 33px;
   letter-spacing: -0.011em;
   text-align: center;
-  width: 360px;
+  width: 100%;
   margin: 5px auto;
 }
 .text h2 {
+  font-family: "Century", sans-serif;
+  font-weight: 400;
   font-size: 22px;
+  line-height: 33px;
+  letter-spacing: -1.1%;
+
+  text-align: left;
 }
 .text p {
-  margin: 10px 0px;
   font-family: Cormorant Garamond;
   font-size: 20px;
-  line-height: 30px;
+
   letter-spacing: -0.011em;
   text-align: left;
   color: #666560;
@@ -45,7 +50,7 @@
 }
 .email input {
   box-shadow: 0px 0px 5.399999618530273px 0px #c2c2c2;
-  width: 300px;
+  width: 100%;
   height: 50px;
   top: 215px;
   left: 32px;
@@ -76,6 +81,7 @@
 .list ul li a {
   color: #232221;
   list-style: none;
+  text-decoration: none;
 }
 .list ul {
   padding-inline-start: 0px;
@@ -104,4 +110,21 @@
 
 .button {
   margin: 20px 0;
+}
+
+.social a {
+  text-decoration: none;
+  color: #232221;
+  margin: 20px 0;
+}
+.follow {
+  margin: 25px 0;
+}
+
+.copy {
+  margin-top: 60px;
+}
+
+.icon {
+  margin: 10px 0;
 }
