--- a/src/components/GoldButton/style.module.css
+++ b/src/components/GoldButton/style.module.css
@@ -1,5 +1,13 @@
 .goldButton {
-  background: linear-gradient(#fff0bf, #efc990, #fdd292, #f0c749, #d4af37);
+  background: linear-gradient(
+      99.4deg,
+      #fff0bf -10.68%,
+      #efc990 18.14%,
+      #fdd292 43.87%,
+      rgba(240, 199, 73, 0.42) 81.17%,
+      #d4af37 100%
+    ),
+    linear-gradient(0deg, #c2c2c2, #c2c2c2);
   color: #000; /* Black text */
   border: none;
   padding: 10px 20px;
