--- a/src/components/Product/style.module.css
+++ b/src/components/Product/style.module.css
@@ -1,46 +1,44 @@
+/* style.module.css */
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
-  margin: -10px; /* Adjust the negative margin to add spacing between cards */
+}
+.cardContainer a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .card {
+  width: calc(50% - 16px); /* Calculate width with padding and margin */
   box-sizing: border-box;
-  width: calc(
-    50% - 20px
-  ); /* Adjust width and margin to add spacing between cards */
-  margin: 10px; /* Adjust margin to add spacing between cards */
-  height: 200px; /* Set the fixed height for all cards */
+  text-decoration: none;
+  /* padding: 16px; */
+  border: 1px solid #ddd;
+  margin: 8px;
   display: flex;
   flex-direction: column;
-  text-align: center;
-  border: 1px solid #ddd;
-  text-decoration: none;
-  color: #333;
-  transition: border-color 0.3s ease;
-  box-sizing: border-box;
-}
-
-/* Make the third card full width */
-.card:nth-child(3) {
-  width: 100%;
-  margin: 10px 0; /* Adjust margin to add spacing between cards */
-}
-
-/* Reset the width for the last two cards */
-.card:nth-last-child(-n + 2) {
-  width: calc(
-    50% - 20px
-  ); /* Adjust width and margin to add spacing between cards */
 }
 
 .card img {
-  width: 100%;
-  height: auto; /* Let the image maintain its aspect ratio */
-  object-fit: cover; /* Ensure the image covers the entire container */
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.product-details {
-  margin-top: 10px;
-  overflow: hidden; /* Ensure overflow is hidden for the text */
+.productDetails p {
+  margin: 0;
 }
+.productDetails h3 {
+  margin: 0;
+  font-size: 13px;
+  font-family: Cormorant Garamond;
+}
+
+/* Set width to 100% for the third card and eighth card */
+.card:nth-child(3),
+.card:nth-child(8) {
+  width: 100%;
+  font-size: 22px;
+}
+
+/* Add your other styles as needed */
