--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,4 +1,52 @@
-.main {
+/* style.module.css */
+
+.container {
+  position: relative;
+}
+
+.header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  background-color: white;
+  color: black;
+}
+
+.menuIcon {
+  cursor: pointer;
+}
+
+.logo img {
+  width: 100px; /* Adjust the width as needed */
+}
+
+.searchIcon {
+  cursor: pointer;
+}
+
+.menu {
+  display: none;
+  position: fixed;
+  top: 55px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  padding: 16px;
+  box-sizing: border-box;
+  z-index: 1000;
+}
+
+.menu.open {
+  display: block;
+}
+
+.menu div {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.menu div:hover {
+  background-color: #555;
 }
