--- a/src/components/Product/style.module.css
+++ b/src/components/Product/style.module.css
@@ -41,4 +41,26 @@
   font-size: 22px;
 }
 
-/* Add your other styles as needed */
+.carouselContainer {
+  height: 400px; /* Set your desired fixed height for the carousel container */
+  position: relative;
+}
+
+.carouselImage {
+  object-fit: cover; /* Ensure images cover the container without distortion */
+  height: 100%; /* Take full height of the container */
+}
+
+.carouselText {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.8
+  ); /* Optional: Add a semi-transparent background for better readability */
+  padding: 10px;
+}
