--- a/src/components/Product/style.module.css
+++ b/src/components/Product/style.module.css
@@ -42,7 +42,7 @@
 }
 
 .carouselContainer {
-  height: 100vh; /* Set your desired fixed height for the carousel container */
+  height: 40vh; /* Set your desired fixed height for the carousel container */
   position: relative;
   overflow: hidden;
 }
@@ -77,7 +77,7 @@
 .cardAlternate {
   /* display: flex;
   flex-wrap: wrap; */
-  border: 2px solid #3498db;
+
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -101,9 +101,9 @@
 }
 
 .cardAlternate img {
-  width: 100%;
-  height: auto;
-  border-bottom: 2px solid #3498db;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .productDetailsAlternate {
@@ -113,12 +113,27 @@
 
 .productDetailsAlternate h3 {
   margin: 0;
-  font-size: 1.4rem;
-  color: #3498db;
+  font-size: 13px;
+  font-family: Cormorant Garamond;
 }
 
 .productDetailsAlternate p {
-  margin: 5px 0 0;
+  margin: 0;
   font-size: 1.2rem;
   color: #444;
+}
+
+.carouselItem {
+  height: 100%;
+}
+
+.productDetails h3 {
+  margin: 0;
+  font-size: 13px;
+  font-family: Cormorant Garamond;
+}
+
+.imgcontainer {
+  display: flex;
+  flex-wrap: wrap;
 }
