--- a/src/components/Banner/style.module.css
+++ b/src/components/Banner/style.module.css
@@ -28,16 +28,53 @@
 
 .circle {
   position: absolute;
-  bottom: -20%; /* Adjust the position to have half inside and half outside */
+  bottom: -30%; /* Adjust the position to have half inside and half outside */
   left: 0; /* Adjust the position to have half inside and half outside */
-  width: 60%; /* Adjust the size of the circle */
-  padding-bottom: 60%; /* Maintain a square aspect ratio for the circle */
-
+  width: 70%; /* Adjust the size of the circle */
+  padding-bottom: 70%; /* Maintain a square aspect ratio for the circle */
+  border: solid 1px black;
   border-radius: 50%;
 }
 .circleTop {
-  background-color: pink;
+  background-color: RGB(255, 236, 236);
 }
 .circleBottom {
   background-color: white;
+}
+
+.textContainer {
+  position: absolute;
+  top: 60%; /* Center the text vertically */
+  left: 45%; /* Center the text horizontally */
+  transform: translate(-50%, -50%); /* Center the text precisely */
+  text-align: center;
+  color: black; /* Adjust the text color */
+  margin: 0 auto;
+}
+.textContainer p {
+  font-size: 10px;
+  color: black;
+}
+.textContainer h3 {
+  font-size: 10px;
+  color: black;
+}
+
+.imageContainerMid {
+  position: relative;
+  overflow: visible;
+  width: 300px;
+  height: 350px;
+  margin-right: auto;
+  padding-top: 15px;
+}
+
+.circleMid {
+  position: absolute;
+  bottom: -30%; /* Adjust the position to have half inside and half outside */
+  right: 0; /* Adjust the position to have half inside and half outside */
+  width: 70%; /* Adjust the size of the circle */
+  padding-bottom: 70%; /* Maintain a square aspect ratio for the circle */
+  background-color: red;
+  border-radius: 50%;
 }
