--- a/src/components/About/style.module.css
+++ b/src/components/About/style.module.css
@@ -22,7 +22,8 @@
 }
 
 .about {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .about p {
@@ -32,6 +33,10 @@
 .one img {
   align-items: center;
   justify-content: center;
+}
+
+.one {
+  margin: 0 auto;
 }
 
 .container {
@@ -48,8 +53,18 @@
 
 .font {
   font-family: "Cormorant Garamond", serif;
-  font-weight: 500;
-  font-size: 16px;
+  /* font-weight: 500; */
+  font-size: 15px;
   line-height: 32px;
   letter-spacing: -1.1%;
+}
+.btn {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.centeredButtons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; /* Adjust the margin as needed */
 }
