--- a/src/components/Banner/style.module.css
+++ b/src/components/Banner/style.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: linear-gradient(to bottom, rgb(220, 180, 180, 1), #ffffff);
+  background: linear-gradient(to bottom, rgb(255, 220, 220, 1), #ffffff);
 
   width: 100%;
   height: 100vh; /* Adjust the height as needed */
@@ -36,7 +36,7 @@
   border-radius: 50%;
 }
 .circleTop {
-  background-color: RGB(255, 236, 236);
+  background: linear-gradient(to bottom, rgb(255, 220, 220, 1), #ffffff);
 }
 .circleBottom {
   background-color: white;
@@ -75,6 +75,7 @@
   right: 0; /* Adjust the position to have half inside and half outside */
   width: 70%; /* Adjust the size of the circle */
   padding-bottom: 70%; /* Maintain a square aspect ratio for the circle */
-  background-color: red;
+  background: linear-gradient(to bottom, rgb(255, 220, 220, 1), #ffffff);
   border-radius: 50%;
+  border: 1px black solid;
 }
