--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -28,3 +28,11 @@
   text-align: center;
   margin: 0 auto;
 }
+.home h3 {
+  text-align: center;
+  font-size: 18px;
+}
+
+.input {
+  margin-left: 30px;
+}
